Fix text alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -195,7 +195,6 @@ input:focus {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  flex-direction: column;
 }
 
 #sunrise {
